assets/css/v2/elevator/elevator_closures_list.scss
.elevator-closures-list {
  display: flex;
  flex: 1;
  flex-direction: column;
  font-size: 48px;
  line-height: 64px;
  color: $cool-black-30;

  .in-station-summary {
    position: relative;
    display: flex;
    justify-content: space-between;
    padding: 24px 48px;

    .text {
      margin-right: 82px;
    }

    &::after {
      position: absolute;
      top: 100%;
      left: 0;
      width: 100%;
      height: 24px;
      content: "";
      background: $cool-black-15;
    }
  }

  .closures-list {
    height: 100%;
    background-color: $warm-neutral-90;

    .header-container {
      margin: 48px;
      margin-bottom: 0;

      .header {
        display: flex;
        margin-bottom: 48px;
        font-size: 96px;
        font-weight: 700;
        line-height: 96px;
      }
    }

    .closure-list-container {
      overflow: hidden;

      .closure-list {
        display: flex;
        flex-flow: column wrap;
        height: 904px;
        transform: translateX(calc(-100% * var(--closure-list-offset)));

        .closure-row {
          position: relative;
          width: 1080px;
          padding: 26px 48px 24px;

          &:not(.current-station) {
            &::after,
            &.first-row-on-page::before {
              position: absolute;
              left: 0;
              width: calc(100% - 48px);
              height: 2px;
              margin: 0 24px;
              content: "";
              background: $true-grey-45;
              opacity: 0.5;
            }

            &::after {
              top: 100%;
            }

            &::before {
              top: 0;
            }
          }

          &.current-station {
            background-color: $warm-neutral-85;
          }

          &__station-name {
            font-size: 62px;
            font-weight: 600;
            line-height: 80px;
            color: $cool-black-15;
          }

          &__name-and-pills {
            display: flex;
            align-items: center;
            margin-bottom: 14px;

            .route-pill {
              width: 132px;
              height: 68.13px;
              margin-right: 24px;

              &__text {
                line-height: 68.13px;
              }

              &__icon {
                height: 100%;
              }

              &__icon-image {
                height: 100%;
                margin-top: 0;
              }
            }
          }

          &__elevator-name {
            font-weight: 500;
          }

          &__elevator-name.list-item {
            display: list-item;
            margin-bottom: 8px;
            margin-left: 48px;
          }

          &__summary.important {
            font-weight: 700;
          }
        }
      }
    }

    .paging-info-container {
      position: absolute;
      bottom: 0;
      display: flex;
      justify-content: space-between;
      width: 100%;
      height: 72px;
      margin-bottom: 20px;

      .more-elevators-text {
        align-self: center;
        padding: 0 48px 20px;
      }
    }
  }
}

